# clad-codes

./: readme.md
1270011-claude-buddy/: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING.md  package.json  tsconfig.json
1270011-claude-buddy/.claude-plugin/: marketplace.json  plugin.json
1270011-claude-buddy/cli/: backup.ts  biomes.ts  buddy-shell.ts  disable.ts  doctor.ts  hunt.ts  index.ts  install.ts  pick.ts  settings.ts  show.ts  test-statusline.sh  test-statusline.ts  tui.tsx  uninstall.ts  upgrade.ts  validate-species.ts  verify.ts
1270011-claude-buddy/docs/: buddy-brain-plan.md  emotion-animations-plan.md
1270011-claude-buddy/hooks/: buddy-comment.sh  file-type-react.sh  hooks.json  mood-react.sh  name-react.sh  react.sh  suggest.sh
1270011-claude-buddy/popup/: buddy-popup.sh  buddy-render.sh  popup-manager.sh
1270011-claude-buddy/scripts/: gen-emoji-widths.ts  paths.sh  postinstall.cjs  snapshot-statusline.sh
1270011-claude-buddy/server/: achievements.test.ts  achievements.ts  art.test.ts  art.ts  award-xp.ts  check-suggestions.ts  consolidate.ts  engine.test.ts  engine.ts  index.ts  manifest.test.ts  mcp-launcher.sh  memory.ts  mood.ts  path.test.ts  path.ts  paths_sh.test.ts  reactions.test.ts  reactions.ts  shift-mood.ts  state.test.ts  state.ts  statusline.test.ts  suggestions.ts  theme.ts  uninstall.test.ts  xp.ts
1270011-claude-buddy/statusline/: buddy-status.sh  combined-status.sh  emoji-widths.data
777genius-claude-code/: README.md
777genius-claude-code/claude-code-source-code-full/: CONTRIBUTING.md  README.md  package-lock.json  package.json
777genius-claude-code/claude-code-working/: README.md  TODO.md  package.json
777genius-claude-code/claude-multimodel/: README.md  install.sh  package.json
777genius-claude-code/mcp-server/: package.json  server.json
AprilNEA-claude-code/: README.md
Gitlawb-openclaude/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  package.json  test_ollama_provider.py
Gitlawb-openclaude/docs/: advanced-setup.md  quick-start-mac-linux.md  quick-start-windows.md
Gitlawb-openclaude/python/: requirements.txt
Gitlawb-openclaude/scripts/: build.ts  no-telemetry-growthbook-stub.test.ts  no-telemetry-plugin.ts  provider-launch.ts  system-check.ts
Gitlawb-openclaude/src/: commands.test.ts  commands.ts  cost-tracker.ts  main.tsx  query.ts  tools.ts
Kuberwastaken-claude-code/src-rust/: Cargo.toml
Kuberwastaken-claude-code/src-rust/crates/core/: Cargo.toml
Kuberwastaken-claude-code/src-rust/crates/core/src/: keybindings.rs  lib.rs  lsp.rs  output_styles.rs  system_prompt.rs  voice.rs
Kuberwastaken-claude-code/src-rust/crates/mcp/: Cargo.toml
Kuberwastaken-claude-code/src-rust/crates/mcp/src/: lib.rs
Kuberwastaken-claurst/: .gitignore  AGENTS.md  CNAME  README.md  index.html  install.ps1  install.sh  plan.md
Kuberwastaken-claurst/.devcontainer/: Dockerfile  devcontainer.json
Kuberwastaken-claurst/.github/: release.yml
Kuberwastaken-claurst/docs/: advanced.md  agents.md  auth.md  commands.md  configuration.md  hooks.md  index.html  index.md  installation.md  keybindings.md  mcp.md  plugins.md  providers.md  tools.md
Kuberwastaken-claurst/src-rust/crates/acp/: Cargo.toml
Kuberwastaken-claurst/src-rust/crates/acp/registry-template/: agent.json
Kuberwastaken-claurst/src-rust/crates/acp/src/: connection.rs  lib.rs  permission.rs  prompt.rs  runtime.rs  server.rs  sessions.rs
Kuberwastaken-claurst/src-rust/crates/api/: Cargo.toml
Kuberwastaken-claurst/src-rust/crates/api/src/: auth.rs  cch.rs  codex_adapter.rs  error_handling.rs  lib.rs  model_registry.rs  provider.rs  provider_error.rs  provider_types.rs  registry.rs  stream_parser.rs  transform.rs
Kuberwastaken-claurst/src-rust/crates/api/src/providers/: anthropic.rs  azure.rs  bedrock.rs  codex.rs  cohere.rs  copilot.rs  free.rs  google.rs  message_normalization.rs  minimax.rs  mod.rs  openai.rs  openai_compat.rs  openai_compat_providers.rs  request_options.rs
Kuberwastaken-claurst/src-rust/crates/api/src/transformers/: anthropic.rs  mod.rs  openai_chat.rs
Kuberwastaken-claurst/src-rust/crates/buddy/: Cargo.toml
Kuberwastaken-claurst/src-rust/crates/buddy/src/: lib.rs
Kuberwastaken-claurst/src-rust/crates/commands/: Cargo.toml
Kuberwastaken-claurst/src-rust/crates/commands/src/: lib.rs  named_commands.rs  stats.rs
Kuberwastaken-claurst/src-rust/crates/plugins/: Cargo.toml
Kuberwastaken-claurst/src-rust/crates/plugins/src/: hooks.rs  lib.rs  loader.rs  manifest.rs  marketplace.rs  plugin.rs  registry.rs
Kuberwastaken-claurst/src-rust/crates/query/: Cargo.toml
Kuberwastaken-claurst/src-rust/crates/query/src/: agent_tool.rs  auto_dream.rs  away_summary.rs  command_queue.rs  compact.rs  context_analyzer.rs  coordinator.rs  cron_scheduler.rs  lib.rs  managed_orchestrator.rs  session_memory.rs  skill_prefetch.rs
Kuberwastaken-claurst/src-rust/crates/tui/: Cargo.toml
Kuberwastaken-claurst/src-rust/crates/tui/src/: agents_view.rs  app.rs  bypass_permissions_dialog.rs  context_viz.rs  desktop_upsell_startup.rs  device_auth_dialog.rs  dialog_select.rs  dialogs.rs  diff_viewer.rs  effort_picker.rs  export_dialog.rs  feedback_survey.rs  file_injection.rs  file_injection_dialog.rs  free_mode_dialog.rs  hooks_config_menu.rs  image_paste.rs  invalid_config_dialog.rs  key_input_dialog.rs  kitty_image.rs  lib.rs  mcp_view.rs  memory_file_selector.rs  memory_update_notification.rs  message_copy.rs  model_picker.rs  notifications.rs  onboarding_dialog.rs  osc8.rs  overlays.rs  plugin_views.rs  privacy_screen.rs  prompt_input.rs  render.rs  rustle.rs  session_branching.rs  session_browser.rs  settings_screen.rs  stats_dialog.rs  tasks_overlay.rs  (+4 more)
Kuberwastaken-claurst/src-rust/crates/tui/src/messages/: markdown.rs  mod.rs
Kuberwastaken-claurst/src-rust/crates/tui/tests/: diff_viewer.rs  markdown_enhancements.rs  render_snapshots.rs
beita6969-claude-code/: README.md  package.json
ultraworkers-claw-code/: .gitignore  README.md
(+455 files in other folders)
